Further bug and error fixes. Started to organise code to improve readability

--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@ html, body{
   height: 100%;
   width: 100%;
 font-family: 'Open Sans Condensed', sans-serif;
-
 color: black;
-
 }
 
 .navbar{
@@ -100,7 +98,7 @@ figure {
   height: 100%;
 }
 #fixed {
-  background-image: url('img/mac.png');
+  background-image: url('Images\barbed lives.png');
   position: fixed;
   display: block;
   top: 0;
@@ -162,11 +160,6 @@ initial-col{
 
 .row {
   display: flex;
-}
-
-.column {
-  flex: 25%;
-  padding: 5px;
 }
 
 #home-links{
